Fix comment paragraphs and hr spacing

--- a/app/stylesheets/screen.sass
+++ b/app/stylesheets/screen.sass
@@ -254,7 +254,6 @@ table#members_table
     hr
       border: 0
       background: url(../../images/dotted_horizontal_border.png) bottom repeat-x
-      margin-top: 0
       height: 2px
     .actions
       padding: 0 0 10px 10px
